--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     />
 
     <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="S0umyajit | Portfolio" />
+    <meta itemprop="name" content="Kishore | Portfolio" />
     <meta
       itemprop="description"
       content="Self Developed personal website build with React.js"
@@ -28,9 +28,9 @@
     />
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://soumyajit.vercel.app" />
+    <meta property="og:url" content="https://dirkishore.github.io/Portfolio/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="S0umyajit | Portfolio" />
+    <meta property="og:title" content="Kishore | Portfolio" />
     <meta
       property="og:description"
       content="Self Developed personal website build with React.js"
