--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     />
     <meta
       itemprop="image"
-      content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"
+      content="https://raw.githubusercontent.com/dirkishore/Portfolio/main/Images/readme-img1.png"
     />
 
     <!-- Facebook Meta Tags -->
@@ -37,19 +37,19 @@
     />
     <meta
       property="og:image"
-      content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"
+      content="https://raw.githubusercontent.com/dirkishore/Portfolio/main/Images/readme-img1.png"
     />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="S0umyajit | Portfolio" />
+    <meta name="twitter:title" content="Kishore | Portfolio" />
     <meta
       name="twitter:description"
       content="Self Developed personal website build with React.js"
     />
     <meta
       name="twitter:image"
-      content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"
+      content="https://raw.githubusercontent.com/dirkishore/Portfolio/main/Images/readme-img1.png"
     />
   </head>
 
